@@ -8,6 +8,9 @@ lldpd (0.7.8)
     + Android support
     + Add the possibility to disable privilege separation (lower
       memory consumption, lower security, don't do it).
+    + Interfaces can now be whitelisted. For example, *,!eth*,!!eth1
+      is a valid pattern for all interfaces except eth ones, except
+      eth1.
 
 lldpd (0.7.7)
   * Features:
